objects/OriPlast_Discount_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Cash_Discount__c</fullName>
        <description>This Field Store Cash Discount For a Product</description>
        <label>Cash Discount %</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <description>This field stored TD For a product</description>
        <label>Trade Discount (TD) %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ending_Date__c</fullName>
        <description>This Field Store Ending Date From Product to Product Price</description>
        <label>Ending Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ItemDiscountCode_ExternalKey__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This Field Store combined Value of (Account.Customer Disc. Group_Product.Item Disc. Group)</description>
        <externalId>true</externalId>
        <label>ItemDiscountCode_ExternalKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Item_Disc_Group_Description__c</fullName>
        <description>This Field store Product Name</description>
        <label>Item Disc. Group Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Discount__c</fullName>
        <label>Line Discount %</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Minimum_Quantity__c</fullName>
        <label>Minimum Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Code_Description__c</fullName>
        <label>Sales Code Description</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customers of Andhra Pradesh</fullName>
                </value>
                <value>
                    <fullName>Customers of Assam</fullName>
                </value>
                <value>
                    <fullName>Customers of Bihar</fullName>
                </value>
                <value>
                    <fullName>Customers of Chhattisgarh</fullName>
                </value>
                <value>
                    <fullName>Customers of Jharkhand</fullName>
                </value>
                <value>
                    <fullName>Customers of Kerala</fullName>
                </value>
                <value>
                    <fullName>Customers of Karim Nagar</fullName>
                </value>
                <value>
                    <fullName>Customers of Karnataka</fullName>
                </value>
                <value>
                    <fullName>Customers of Maharashtra</fullName>
                </value>
                <value>
                    <fullName>Customers of Nagaland</fullName>
                </value>
                <value>
                    <fullName>Customers of North India</fullName>
                </value>
                <value>
                    <fullName>Customers of Odisha</fullName>
                </value>
                <value>
                    <fullName>Govt. Sales</fullName>
                </value>
                <value>
                    <fullName>Customers of Tamilnadu</fullName>
                </value>
                <value>
                    <fullName>Customers of Tripura</fullName>
                </value>
                <value>
                    <fullName>Customers of West Bengal</fullName>
                </value>
                <value>
                    <fullName>Institutional Sales</fullName>
                </value>
                <value>
                    <fullName>Discount for Hyderabad</fullName>
                </value>
                <value>
                    <fullName>Special Discount 10% (Appl) prevaling CDGNID</fullName>
                </value>
                <value>
                    <fullName>Special Discount 33% Aditya Distri.</fullName>
                </value>
                <value>
                    <fullName>Special Discount For Ori-Marketing</fullName>
                </value>
                <value>
                    <fullName>Special Discount for Sree Bhander prevaling Assam</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Code__c</fullName>
        <label>Sales Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CDGAP</fullName>
                </value>
                <value>
                    <fullName>CDGASM</fullName>
                </value>
                <value>
                    <fullName>CDGBH</fullName>
                </value>
                <value>
                    <fullName>CDGCH</fullName>
                </value>
                <value>
                    <fullName>CDGJH</fullName>
                </value>
                <value>
                    <fullName>CDGKA</fullName>
                </value>
                <value>
                    <fullName>CDGKN</fullName>
                </value>
                <value>
                    <fullName>CDGKR</fullName>
                </value>
                <value>
                    <fullName>CDGMH</fullName>
                </value>
                <value>
                    <fullName>CDGNG</fullName>
                </value>
                <value>
                    <fullName>CDGNID</fullName>
                </value>
                <value>
                    <fullName>CDGOR</fullName>
                </value>
                <value>
                    <fullName>CDGOVT</fullName>
                </value>
                <value>
                    <fullName>CDGTN</fullName>
                </value>
                <value>
                    <fullName>CDGTR</fullName>
                </value>
                <value>
                    <fullName>CDGWB</fullName>
                </value>
                <value>
                    <fullName>CDINST</fullName>
                </value>
                <value>
                    <fullName>HYDDIS</fullName>
                </value>
                <value>
                    <fullName>SPL10</fullName>
                </value>
                <value>
                    <fullName>SPL33</fullName>
                </value>
                <value>
                    <fullName>SPLORI</fullName>
                </value>
                <value>
                    <fullName>SPLSREE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Special_Discount__c</fullName>
        <description>This field made for if in future there are special discount for a product</description>
        <label>Special Discount %</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Starting_Date__c</fullName>
        <description>This Field Store Starting Date From Product to Product Price</description>
        <label>Starting Date</label>
        <type>Date</type>
    </fields>
    <label>OriPlast Discount Mapping</label>
    <nameField>
        <label>Discount Maping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OriPlast Discount Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>